fix(assetlibrary): search with multiple exist/nexist
